--- a/.github/workflows/build-check-install.yaml
+++ b/.github/workflows/build-check-install.yaml
@@ -8,6 +8,7 @@ on:
     branches:
       - main
       - pre-release
+      - develop
   pull_request:
     types:
       - opened
@@ -17,6 +18,7 @@ on:
     branches:
       - main
       - pre-release
+      - develop
   workflow_dispatch:
   workflow_call:
     secrets:
